@@ -59,11 +59,10 @@ ifneq (,$(findstring $(DEB_BUILD_ARCH),armel mipsel powerpc))
 	CONFIGUREFLAGS = --disable-jit
 endif
 
-# FIXME: parallel builds are currently not 100% working, so disable
-#ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-#	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-#	MAKEARGUMENTS += -j$(NUMJOBS)
-#endif
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+	MAKEARGUMENTS += -j$(NUMJOBS)
+endif
 
 clean:
 	dh_testdir
